--- a/src/main/resources/templates/user/userList.twig
+++ b/src/main/resources/templates/user/userList.twig
@@ -58,6 +58,9 @@
                                     Job
                                 </th>
                                 <th>
+                                    Echipa
+                                </th>
+                                <th>
                                     Responsabil
                                 </th>
                                 <th>
@@ -66,7 +69,6 @@
                                 <th>
                                     Rol
                                 </th>
-
                                 <th>
                                     Email
                                 </th>
@@ -83,6 +85,9 @@
                                     </td>
                                     <td>
                                         {{ activeUser.job.name }}
+                                    </td>
+                                    <td>
+                                        {{ activeUser.team.name }}
                                     </td>
                                     <td>
                                         {{ activeUser.responsibleUser.fullName }}
