--- a/src/main/resources/templates/user/userProfile.twig
+++ b/src/main/resources/templates/user/userProfile.twig
@@ -18,26 +18,21 @@
                         <div class="text-center">
                             <img alt="User profile picture"
                                  class="profile-user-img img-fluid img-circle"
-                                 src="/webjars/AdminLTE/3.0.5/dist/img/user4-128x128.jpg">
+                                 src="{{ user.image }}">
                         </div>
 
                         <h3 class="profile-username text-center">{{ user.fullName }}</h3>
 
-                        <p class="text-muted text-center">Software Engineer</p>
+                        <p class="text-muted text-center">{{ user.job.name }}</p>
 
                         <ul class="list-group list-group-unbordered mb-3">
                             <li class="list-group-item">
-                                <b>Followers</b> <a class="float-right">1,322</a>
+                                <b>Zile concediu {{ "now"|date("YYYY") }}</b> <a class="float-right">5</a>
                             </li>
                             <li class="list-group-item">
-                                <b>Following</b> <a class="float-right">543</a>
-                            </li>
-                            <li class="list-group-item">
-                                <b>Friends</b> <a class="float-right">13,287</a>
+                                <b>#WFH{{ "now"|date("MMMM") }}</b> <a class="float-right">10</a>
                             </li>
                         </ul>
-
-                        <a class="btn btn-primary btn-block" href="#"><b>Follow</b></a>
                     </div>
                     <!-- /.card-body -->
                 </div>
@@ -46,40 +41,42 @@
                 <!-- About Me Box -->
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">About Me</h3>
+                        <h3 class="card-title">Despre</h3>
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body">
-                        <strong><i class="fas fa-book mr-1"></i> Education</strong>
+                        <strong><i class="fas fa-users"></i> Echipa</strong>
 
                         <p class="text-muted">
-                            B.S. in Computer Science from the University of Tennessee at Knoxville
+                            {{ user.team.name }}
                         </p>
 
                         <hr>
 
-                        <strong><i class="fas fa-map-marker-alt mr-1"></i> Location</strong>
+                        <strong><i class="fas fa-people-arrows"></i> Responsabil</strong>
 
-                        <p class="text-muted">Malibu, California</p>
+                        <p class="text-muted">{{ user.responsibleUser.fullName }}</p>
 
                         <hr>
 
-                        <strong><i class="fas fa-pencil-alt mr-1"></i> Skills</strong>
+                        <strong><i class="fas fa-glass-cheers"></i> Colegi</strong>
 
                         <p class="text-muted">
-                            <span class="tag tag-danger">UI Design</span>
-                            <span class="tag tag-success">Coding</span>
-                            <span class="tag tag-info">Javascript</span>
-                            <span class="tag tag-warning">PHP</span>
-                            <span class="tag tag-primary">Node.js</span>
+                            {% for coleague in user.responsibleUser.responsibleForUsers %}
+                                {% if coleague.id != user.id %}
+                                    {{ coleague.fullName }}
+                                    <br>
+                                {% endif %}
+                            {% endfor %}
                         </p>
 
                         <hr>
 
-                        <strong><i class="far fa-file-alt mr-1"></i> Notes</strong>
+                        <strong><i class="fas fa-calendar-alt"></i> In firma din</strong>
 
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-                            fermentum enim neque.</p>
+                        <p class="text-muted">
+                            {{ user.getHireDateAsString }}
+                        </p>
                     </div>
                     <!-- /.card-body -->
                 </div>
