implementare redirect din my profile spre user info

--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -173,7 +173,7 @@
                          alt="{{ loggedUser.fullName }} Image">
                 </div>
                 <div class="info">
-                    <a href="#" class="d-block">{{ loggedUser.fullName }}</a>
+                    <a href="/my-profile" class="d-block">{{ loggedUser.fullName }}</a>
                 </div>
             </div>
 
