--- a/src/main/resources/templates/user/userProfile.twig
+++ b/src/main/resources/templates/user/userProfile.twig
@@ -41,7 +41,7 @@
                 <!-- About Me Box -->
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Despre</h3>
+                        <h3 class="card-title">Info</h3>
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body">
