implementare update user info din profile

--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -322,7 +322,7 @@
 </script>
 
 <script>
-    $("document").ready(function () {
+    $(document).ready(function () {
         {% if redirectErrorMessage is not empty %}
         Toast.fire({
             icon: 'error',
