--- a/src/main/resources/templates/user/userList.twig
+++ b/src/main/resources/templates/user/userList.twig
@@ -96,7 +96,7 @@
                                         {{ activeUser.getHireDateAsString }}
                                     </td>
                                     <td>
-                                        {{ activeUser.role.code }}
+                                        {{ activeUser.role.name }}
                                     </td>
                                     <td>
                                         {{ activeUser.email }}
